%%{init: {'theme': 'neutral'}}%%
erDiagram
    group_members {
        int id PK
        string group_id "len=32, not null"
        string member_id "len=64, not null"
        datetime joined_at "not null"
    }
    group_restaurants {
        int id PK
        string group_id "len=32, not null"
        string place_id "len=128, not null"
        int position "not null"
        string name "len=255, not null"
        string address "len=255"
        float rating
        int price_level
        text photo_url
        json photo_urls
        float lat "not null"
        float lng "not null"
        json types
        json reviews
        string phone_number "len=64"
        string website "len=255"
        string google_maps_url "len=255"
        int user_ratings_total
        json opening_hours
        text summary
    }
    group_votes {
        int id PK
        string group_id "len=32, not null"
        string member_id "len=64, not null"
        string place_id "len=128, not null"
        string value "len=10, not null"
        datetime created_at "not null"
    }
    groups {
        string id PK "len=32"
        string group_name "len=50"
        string organizer_id "len=64, not null"
        float latitude "not null"
        float longitude "not null"
        int radius "not null"
        int min_price
        int max_price
        json types
        string status "len=20, not null"
        datetime created_at "not null"
    }

    groups ||--o{ group_members : "group_id"
    groups ||--o{ group_restaurants : "group_id"
    groups ||--o{ group_votes : "group_id"
